# reduce_kernel

./: Cargo.toml  build.rs  task.md  text.txt
src/: binary_op.rs  exp.rs  kernel.rs  lib.rs  main.rs  map_kernel.rs  reduce.rs  softmax.rs  tensor.rs  unary_op.rs
src/binary_op/: binary.cuh  div.cu  div.rs  sub.cu  sub.rs
src/cuda/: cuda_utils.cuh  exp.cu  map_kernel.cu  softmax.cu
src/reduce/: ops.rs  reduce_cuda.rs  reduce_kernel.cuh
src/reduce/ops/: max.cu  max.rs  sum.cu  sum.rs
src/unary_op/: exp.cu  exp.rs  unary.cuh
